<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <CheckBoxPreference
        android:key="key_inner_browser"
        android:title="@string/inner_browser"
        android:defaultValue="false"
        />
    <CheckBoxPreference
        android:key="key_picture_only_wifi"
        android:title="@string/picture_only_wifi"
        android:defaultValue="true"
        android:dependency="key_show_pictures"
        />
    <CheckBoxPreference
        android:key="key_show_pictures"
        android:title="@string/show_pictures"
        android:summaryOn="@string/show_pictures_yes"
        android:summaryOff="@string/show_pictures_no"
        android:defaultValue="true"
        />
    <CheckBoxPreference
        android:key="key_page_animation"
        android:title="@string/page_animation"
        android:summaryOn="@string/page_animation_on"
        android:summaryOff="@string/page_animation_off"
        android:defaultValue="true"
        />
    <CheckBoxPreference
        android:key="key_news_animation"
        android:title="@string/show_news_animation"
        android:summaryOn="@string/news_animation_on"
        android:summaryOff="@string/news_animation_off"
        android:defaultValue="true"
        />
    <CheckBoxPreference
        android:key="key_delete_on_refresh"
        android:title="@string/delete_old_on_refresh"
        android:defaultValue="true"
        />
    <ListPreference
        android:key="key_widget_layout"
        android:title="@string/widget_layout"
        android:dialogTitle="@string/select_widget_layout"
        android:entries="@array/widget_layout_entry"
        android:entryValues="@array/widget_layout_value"
        android:defaultValue="list"
        android:summary="@string/select_widget_layout"
        />
    <ListPreference
        android:key="key_update_frequency"
        android:title="@string/update_frequency"
        android:dialogTitle="@string/select_update_frequency"
        android:entries="@array/update_frequency_entry"
        android:entryValues="@array/update_frequency_value"
        android:defaultValue="0"
        android:summary="@string/select_update_frequency"
        />
    <ListPreference
        android:key="key_validaty_time"
        android:title="@string/validaty_time"
        android:dialogTitle="@string/select_validaty_time"
        android:entries="@array/validaty_time_entry"
        android:entryValues="@array/validaty_time_value"
        android:defaultValue="1"
        android:summary="@string/select_validaty_time"
        />
</PreferenceScreen>