<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="49dp"
        android:background="@drawable/white_g"
        android:cacheColorHint="#00000000"
        android:listSelector="@drawable/listview_selector" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="49dp"
        android:background="@drawable/white_g"
        android:gravity="center"
        android:text="@string/empty_subscribe"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" />

    <com.android.rss.view.TabContainer
        android:id="@+id/function_tab"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp"
        android:background="@android:color/white"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/tab_button_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <view class="com.android.rss.view.TabContainer$TabButton"
                android:id="@+id/tab_subscribed"
                style="@style/tab_button"
                android:src="@drawable/rss"
                android:text="@string/feed_subscribed" />

            <view class="com.android.rss.view.TabContainer$TabButton"
                android:id="@+id/tab_bundle"
                style="@style/tab_button"
                android:src="@drawable/rss"
                android:text="@string/addbybundlestitle" />

            <view class="com.android.rss.view.TabContainer$TabButton"
                android:id="@+id/tab_custom"
                style="@style/tab_button"
                android:src="@drawable/rss"
                android:text="@string/custom" />
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/tab_slide_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3.0"
            >
            <Button
                android:id="@+id/tab_slide_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:text="@string/feed_subscribed"
                android:background="@drawable/pressed_state_shape_circle"
                />
        </LinearLayout>
    </com.android.rss.view.TabContainer>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/function_tab"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@android:color/black" />

</RelativeLayout>